@@ -1,6 +1,7 @@
 ncmpc 0.45 - not yet released
 * make "tagtypes" errors non-fatal
 * check which tag types are supported by MPD (fixes MPD 0.21 support)
+* lyrics: fix path injection bug
 * lyrics/azlyrics: normalize accented letters (using the "unidecode" library)
 * lyrics/azlyrics: unescape HTML entities
 
